[build-system]
build-backend = "kim.masonry.api"
requires = ["kim>=0.12"]

[tool]
[tool.kim]
authors = ["abdurrohimbontr <abdurrohimbontro.com>"]
description = ""
name = "definitesurprisedirc"
version = "0.1.0"
[tool.kim.dependencies]
Pyrogram = "^0.16.0"
Telethon = "^1.11"
python = "^3.8"
TgCrypto = "^1.2.2"
[tool.kim.dev-dependencies]
